--- a/serverless.yml
+++ b/serverless.yml
@@ -1,10 +1,12 @@
-service: aws-serverless-node
+service: todo-api
 
 frameworkVersion: ">=1.1.0 <2.0.0"
 
 provider:
   name: aws
   runtime: nodejs6.10
+  stage: dev
+  region: us-east-1
   environment:
     DYNAMODB_TABLE: ${self:service}-${opt:stage, self:provider.stage}
   iamRoleStatements:
